--- a/src/index.html
+++ b/src/index.html
@@ -74,8 +74,8 @@
                 </div>
                 <div class="txt">
                     <h1>
-                        Перегон и перевозка <br>
-                        техники и грузов транзитом <br>
+                        Перегон и перевозка
+                        техники и грузов транзитом
                         через Казахстан
                     </h1>
                     <div class="sub_title">
