--- a/src/inner.html
+++ b/src/inner.html
@@ -106,7 +106,7 @@
                             Профессиональные консультации и качественное обслуживание
                         </li>
                     </ul>
-                    <a href="" class="btn btn_form_gold">
+                    <a href="" class="btn btn_form_gold btn_bold">
                         Доставить технику с СЭЗ Хоргос
                     </a>
                 </div>
