--- a/src/jobs.html
+++ b/src/jobs.html
@@ -136,19 +136,19 @@
         </h2>
         <div class="wrapper_items">
             <div class="item">
-                <img src="" alt="">
+                <img src="./img/item_icon_1.png" alt="">
                 <h3>
                     Алматы
                 </h3>
             </div>
             <div class="item">
-                <img src="" alt="">
+                <img src="./img/item_icon_2.png" alt="">
                 <h3>
                     Усть-Каменогорск
                 </h3>
             </div>
             <div class="item">
-                <img src="" alt="">
+                <img src="./img/item_icon_3.png" alt="">
                 <h3>
                     Москва
                 </h3>
@@ -170,16 +170,13 @@
                     <img src="./img/slider_1.png" alt="">
                 </div>
                 <div class="item">
-                    <img src="./img/slider_1.png" alt="">
+                    <img src="./img/slider_2.png" alt="">
                 </div>
                 <div class="item">
-                    <img src="./img/slider_1.png" alt="">
+                    <img src="./img/slider_3.png" alt="">
                 </div>
                 <div class="item">
-                    <img src="./img/slider_1.png" alt="">
-                </div>
-                <div class="item">
-                    <img src="./img/slider_1.png" alt="">
+                    <img src="./img/slider_4.png" alt="">
                 </div>
             </div>
             <div class="arrows">
