--- a/src/index.html
+++ b/src/index.html
@@ -63,6 +63,48 @@
 
                    </div>
                </div>
+               <a href="#" class="burger_menu_btn">
+                   <div></div>
+               </a>
+               <div class="burger_menu">
+                   <div class="phone_number">
+                       <small>
+                           Callcenter :
+                       </small>
+                       <a href="#">
+                           +7 700 900 77 77
+                       </a>
+                   </div>
+                   <nav>
+                       <ul>
+                           <li>
+                               <a href="#" class="active">
+                                   Главная
+                               </a>
+                           </li>
+                           <li>
+                               <a href="./inner.html">
+                                   Услуги
+                               </a>
+                           </li>
+                           <li>
+                               <a href="#fot">
+                                   Личный кабинет
+                               </a>
+                           </li>
+                           <li>
+                               <a href="#">
+                                   Контакты
+                               </a>
+                           </li>
+                           <li>
+                               <a href="./jobs.html">
+                                   О нас
+                               </a>
+                           </li>
+                       </ul>
+                   </nav>
+               </div>
            </div>
        </div>
     </header>
