--- a/src/jobs.html
+++ b/src/jobs.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/slick.css">
     <link rel="stylesheet" href="./css/style.min.css">
-
+    <link rel="stylesheet" href="./css/media.min.css">
     <script src="js/scripts.js"></script>
     <title>Document</title>
 </head>
