--- a/src/index.html
+++ b/src/index.html
@@ -167,8 +167,8 @@
                         </a>
                     </div>
                     <div class="imgs">
-                        <img src="./img/cropped-izmitnakliyat.png" alt="">
-                        <img src="./img/cropped-izmitnakliyat.png" alt="">
+                        <img src="./img/2.png" alt="">
+                        <img src="./img/2.png" alt="">
                     </div>
                 </div>
 
