--- a/src/jobs.html
+++ b/src/jobs.html
@@ -62,6 +62,48 @@
 
                 </div>
             </div>
+            <a href="#" class="burger_menu_btn">
+                <div></div>
+            </a>
+            <div class="burger_menu">
+                <div class="phone_number">
+                    <small>
+                        Callcenter :
+                    </small>
+                    <a href="#">
+                        +7 700 900 77 77
+                    </a>
+                </div>
+                <nav>
+                    <ul>
+                        <li>
+                            <a href="#" class="active">
+                                Главная
+                            </a>
+                        </li>
+                        <li>
+                            <a href="./inner.html">
+                                Услуги
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#fot">
+                                Личный кабинет
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                Контакты
+                            </a>
+                        </li>
+                        <li>
+                            <a href="./jobs.html">
+                                О нас
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
         </div>
     </div>
 </header>
@@ -77,16 +119,19 @@
         </h2>
 
         <div class="wrapper_filter">
-            <select class="city selector" id="city">
-                <option value="all">Все</option>
-                <option value="Almaty">Алматы</option>
-                <option value="Ust-Kamenogorsk">Усть-Каменогорск</option>
-            </select>
-            <select class="job selector" id="job">
-                <option value="all">Все</option>
-                <option value="Менеджеры отдела продаж">Менеджер по продажам</option>
-                <option value="Водитель">Водитель</option>
-            </select>
+            <div>
+                <select class="city selector" id="city">
+                    <option value="all">Все</option>
+                    <option value="Almaty">Алматы</option>
+                    <option value="Ust-Kamenogorsk">Усть-Каменогорск</option>
+                </select>
+                <select class="job selector" id="job">
+                    <option value="all">Все</option>
+                    <option value="Менеджеры отдела продаж">Менеджер по продажам</option>
+                    <option value="Водитель">Водитель</option>
+                </select>
+            </div>
+
             <input type="text" class="search_section" placeholder="Найти" id="search_job">
         </div>
 
@@ -361,7 +406,7 @@
                     slidesToShow: 3,
                     slidesToScroll: 3,
                     infinite: true,
-                    dots: true
+                    dots: false
                 }
             },
             {
@@ -372,10 +417,19 @@
                 }
             },
             {
+                breakpoint: 481,
+                settings: {
+                    slidesToShow: 1,
+                    slidesToScroll: 1,
+                    centerMode:true
+                }
+            },
+            {
                 breakpoint: 480,
                 settings: {
                     slidesToShow: 1,
-                    slidesToScroll: 1
+                    slidesToScroll: 1,
+
                 }
             }
         ]
