--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
                    <span>
                        Callcenter :
                    </span>
-                   <a href="#">
+                   <a href="tel:+77009007777">
                        +7 700 900 77 77
                    </a>
                    <div class="search_btn">
