--- a/src/jobs.html
+++ b/src/jobs.html
@@ -155,9 +155,9 @@
                     Подробнее
                 </button>
             </div>
-            <div class="item" data-city="Ust-Kamenogorsk">
+            <div class="item" data-city="Almaty">
                 <h5>
-                  Водитель фуры
+                  Водитель фуры Almaty
                 </h5>
                 <button class="btn btn_gold">
                     Подробнее
