--- a/src/inner.html
+++ b/src/inner.html
@@ -110,7 +110,7 @@
 </header>
 <section class="section_map">
     <div class="container">
-        <div class="wrapper">
+        <div class="wrapper wrapper_inner">
 <!--            <div class="blue_bg">-->
 
 <!--            </div>-->
