--- a/src/jobs.html
+++ b/src/jobs.html
@@ -259,8 +259,8 @@
                     Найдите свою цель и используйте свои сильные стороны, чтобы достичь ее!
                 </div>
                 <div class="txt">
-                    Причина, почему вы работаете.
-                    Чтобы внести свой вклад и повысить
+                    Причина, почему вы работаете. <br>
+                    Чтобы внести свой вклад и повысить <br>
                     ценность чего-то или кого-то.
 
                 </div>
